WB-MDM3 template: fix deprecated template

--- a/templates/config-wb-mdm3-deprecated.json.jinja
+++ b/templates/config-wb-mdm3-deprecated.json.jinja
@@ -6,6 +6,7 @@
     "title": "WB-MDM3_template_title",
     "device_type": "WB-MDM3",
     "group": "g-wb",
+    "deprecated": true,
     "hw": [
         {
             "signature": "WBMD3"
