--- a/templates/config-wb-mir_buttons.json.jinja
+++ b/templates/config-wb-mir_buttons.json.jinja
@@ -3,20 +3,17 @@
 {% set INPUTS_NUMBER = 1 -%}
 {% set FIRST_INPUT = 1 -%}
 {
-    "title": "WB-MIR_BUTTONS_template_title",
-    "device_type": "WB-MIR BUTTONS",
+    "title": "WB-MIR-v.3_template_title",
+    "device_type": "WB-MIR v.3",
     "group": "g-wb",
     "hw": [
-        {
-            "signature": "WBMIR3"
-        },
         {
             "signature": "WB-MIR v.3"
         }
     ],
     "device": {
-        "name": "WB-MIR BUTTONS",
-        "id": "wb-mir_buttons",
+        "name": "WB-MIR v.3",
+        "id": "wb-mir_v3",
         "max_read_registers": 0,
         "response_timeout_ms": 1,
         "frame_timeout_ms": 12,
@@ -418,7 +415,7 @@
 
         "translations": {
             "en": {
-                "WB-MIR_BUTTONS_template_title": "WB-MIR (Modbus IR remote control)",
+                "WB-MIR-v.3_template_title": "WB-MIR (Modbus IR remote control)",
                 "Uptime": "Uptime (s)",
 
                 "temperature_readings_filter_deg_title": "Erroneous 1-Wire Temperature Readings Filter (°C)",
@@ -426,7 +423,6 @@
                 "temperature_readings_period_s_title": "Temperature sensors poll period (s)",
                 "temperature_readings_period_s_description": "When changing this parameter, you should also change the erroneous values filter coefficient. The default value is 2",
 
-                "WB-M1W2_template_title": "WB-M1W2 (2-channel temperature measurement and pulse-counter module)",
                 "mode_description": "For press detection, firmware version 4.31.11 or newer is required",
                 "baud_rate_description": "Make sure that communication with the device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600",
                 "units": "s",
@@ -440,7 +436,7 @@
                 "debounce_time_description": "For press detection must be 5-10 times less than the second press waiting time. Adds a delay to the response to presses. Default value is 50"
             },
             "ru": {
-                "WB-MIR_BUTTONS_template_title": "WB-MIR (Modbus-модуль ИК-управления)",
+                "WB-MIR-v.3_template_title": "WB-MIR (Modbus-модуль ИК-управления)",
                 "IR Commands": "ИК-команды",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
