--- a/templates/config-wb-mir_v3.json.jinja
+++ b/templates/config-wb-mir_v3.json.jinja
@@ -419,7 +419,7 @@
 
                 "temperature_readings_filter_deg_title": "Erroneous 1-Wire Temperature Readings Filter (°C)",
                 "temperature_readings_filter_deg_description": "If the new value equals 85 °C, it is discarded if it differs from the previous one by more than the filter value. Write 0 to disable the filter. The default value is 1",
-                "temperature_readings_period_s_title": "Temperature sensors poll period (s)",
+                "temperature_readings_period_s_title": "Temperature sensor poll period (s)",
                 "temperature_readings_period_s_description": "When changing this parameter, you should also change the erroneous values filter coefficient. The default value is 2",
 
                 "baud_rate_description": "Make sure that communication with the device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600",
@@ -457,9 +457,9 @@
                 "BANK -> RAM":"Редактирование ИК-команд в банке с копированием в RAM",
                 "Learn to BANK": "Записать команду в соответствующий банк ROM",
                 
-                "temperature_readings_filter_deg_title": "Фильтр ошибочных значений датчиков 1-Wire (°C)",
+                "temperature_readings_filter_deg_title": "Фильтр ошибочных значений датчика 1-Wire (°C)",
                 "temperature_readings_filter_deg_description": "Если значение температуры равно 85 °C, то оно отбрасывается, если оно отличается от предыдущего больше, чем на значение фильтра. Запишите 0, чтобы отключить фильтр. Значение по умолчанию - 1",
-                "temperature_readings_period_s_title": "Период опроса датчиков температуры (с)",
+                "temperature_readings_period_s_title": "Период опроса датчика температуры (с)",
                 "temperature_readings_period_s_description": "При изменении данного параметра, следует также изменить коэффициент фильтра ошибочных значений. Значение по умолчанию - 2",
 
                 {% for in_num in range(FIRST_INPUT, INPUTS_NUMBER + 1) -%}
