--- a/templates/config-wb-mir_v2_buttons.json.jinja
+++ b/templates/config-wb-mir_v2_buttons.json.jinja
@@ -415,7 +415,7 @@
 
         "translations": {
             "en": {
-                "WB-MIR-v.2_template_title": "WB-MIR (Modbus IR remote control)",
+                "WB-MIR-v.2_template_title": "WB-MIR v.2 (Modbus IR remote control)",
                 "Uptime": "Uptime (s)",
 
                 "temperature_readings_filter_deg_title": "Erroneous 1-Wire Temperature Readings Filter (°C)",
@@ -436,7 +436,7 @@
                 "debounce_time_description": "For press detection must be 5-10 times less than the second press waiting time. Adds a delay to the response to presses. Default value is 50"
             },
             "ru": {
-                "WB-MIR-v.2_template_title": "WB-MIR (Modbus-модуль ИК-управления)",
+                "WB-MIR-v.2_template_title": "WB-MIR v.2 (Modbus-модуль ИК-управления)",
                 "IR Commands": "ИК-команды",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
