change device_type/name for v2

--- a/templates/config-wb-mir_v2_buttons.json.jinja
+++ b/templates/config-wb-mir_v2_buttons.json.jinja
@@ -4,7 +4,7 @@
 {% set FIRST_INPUT = 1 -%}
 {
     "title": "WB-MIR-v.2_template_title",
-    "device_type": "WB-MIR v.2",
+    "device_type": "WB-MIR v2",
     "group": "g-wb",
     "hw": [
         {
@@ -12,7 +12,7 @@
         }
     ],
     "device": {
-        "name": "WB-MIR v.2",
+        "name": "WB-MIR v2",
         "id": "wb-mir_v2",
         "max_read_registers": 0,
         "response_timeout_ms": 1,
